--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
             position: relative;
             padding-top: 100px;
             overflow: hidden;
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('assets/img/ashkanzadeh.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
         }
 
         .hero-background {
@@ -127,6 +131,7 @@
             width: 100%;
             height: 100%;
             z-index: 0;
+            background: linear-gradient(135deg, rgba(0, 255, 136, 0.1), rgba(139, 92, 246, 0.1));
         }
 
         .grid-background {
@@ -180,10 +185,12 @@
         .hero-content {
             position: relative;
             z-index: 1;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 5rem;
-            align-items: center;
+            max-width: 900px;
+            text-align: left;
+        }
+
+        .hero-profile-img {
+            display: none;
         }
 
         .hero-text h1 {
@@ -192,6 +199,7 @@
             line-height: 1.1;
             margin-bottom: 1.5rem;
             letter-spacing: -2px;
+            text-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
         }
 
         .gradient-text {
@@ -203,9 +211,19 @@
 
         .hero-text .subtitle {
             font-size: 1.5rem;
-            color: var(--text-secondary);
-            margin-bottom: 2rem;
-            font-weight: 300;
+            color: var(--text-primary);
+            margin-bottom: 1.5rem;
+            font-weight: 400;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+        }
+
+        .hero-description {
+            font-size: 1.1rem;
+            color: rgba(255, 255, 255, 0.9);
+            line-height: 1.8;
+            max-width: 700px;
+            margin: 0 0 3rem 0;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
         }
 
         .typing-text {
@@ -216,7 +234,7 @@
         .cta-buttons {
             display: flex;
             gap: 1.5rem;
-            margin-top: 3rem;
+            justify-content: center;
         }
 
         .btn {
@@ -253,101 +271,6 @@
             background: var(--accent);
             color: var(--bg-primary);
             transform: translateY(-3px);
-        }
-
-        .hero-visual {
-            position: relative;
-            height: 500px;
-        }
-
-        .profile-card-3d {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 400px;
-            background: var(--bg-card);
-            border-radius: 30px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            padding: 3rem;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            box-shadow: var(--shadow);
-            transition: transform 0.3s ease;
-        }
-
-        .profile-card-3d:hover {
-            transform: translate(-50%, -50%) translateY(-10px);
-        }
-
-        .profile-img-container {
-            position: relative;
-            margin-bottom: 2rem;
-        }
-
-        .profile-img {
-            width: 200px;
-            height: 200px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 3px solid var(--accent);
-            box-shadow: 0 0 50px rgba(0, 255, 136, 0.3);
-        }
-
-        .status-badge {
-            position: absolute;
-            bottom: 10px;
-            right: 10px;
-            background: var(--accent);
-            color: var(--bg-primary);
-            padding: 0.5rem 1rem;
-            border-radius: 20px;
-            font-size: 0.75rem;
-            font-weight: 600;
-            font-family: 'JetBrains Mono', monospace;
-            box-shadow: 0 5px 20px rgba(0, 255, 136, 0.4);
-        }
-
-        .profile-info {
-            text-align: center;
-        }
-
-        .profile-info h3 {
-            font-size: 1.8rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .profile-info p {
-            color: var(--text-secondary);
-            margin-bottom: 1.5rem;
-        }
-
-        .social-icons {
-            display: flex;
-            gap: 1rem;
-            justify-content: center;
-        }
-
-        .social-icon {
-            width: 45px;
-            height: 45px;
-            border-radius: 50%;
-            background: rgba(255, 255, 255, 0.05);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-decoration: none;
-            color: var(--text-primary);
-            transition: all 0.3s ease;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .social-icon:hover {
-            background: var(--accent);
-            color: var(--bg-primary);
-            transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(0, 255, 136, 0.3);
         }
 
         /* Section Styling */
@@ -662,11 +585,6 @@
 
         /* Responsive */
         @media (max-width: 1024px) {
-            .hero-content {
-                grid-template-columns: 1fr;
-                text-align: center;
-            }
-
             .hero-text h1 {
                 font-size: 3.5rem;
             }
@@ -677,10 +595,6 @@
 
             .contact-grid {
                 grid-template-columns: repeat(2, 1fr);
-            }
-
-            .cta-buttons {
-                justify-content: center;
             }
         }
 
@@ -693,13 +607,14 @@
                 font-size: 2.5rem;
             }
 
+            .hero-profile-img {
+                width: 250px;
+                height: 250px;
+            }
+
             .research-grid,
             .contact-grid {
                 grid-template-columns: 1fr;
-            }
-
-            .profile-card-3d {
-                width: 350px;
             }
         }
 
@@ -735,6 +650,8 @@
         </div>
         <div class="container">
             <div class="hero-content">
+                <img src="assets/img/ashkanzadeh.jpg" alt="Ashkan Yousefi Zadeh" class="hero-profile-img">
+                
                 <div class="hero-text">
                     <h1>
                         Hi, I'm <span class="gradient-text">Ashkan Yousefi Zadeh</span>
@@ -742,30 +659,12 @@
                     <p class="subtitle">
                         <span class="typing-text">PhD Candidate · AI & Autonomous Vehicles Researcher</span>
                     </p>
-                    <p style="color: var(--text-secondary); font-size: 1.1rem; line-height: 1.8;">
+                    <p class="hero-description">
                         Working at the intersection of Human-Centred AI (HCAI), Explainable AI (XAI), and Natural Language Processing (NLP) to make automated vehicles more transparent, intuitive, and aligned with human expectations.
                     </p>
                     <div class="cta-buttons">
                         <a href="#contact" class="btn btn-primary">Let's Collaborate</a>
                         <a href="#publications" class="btn btn-secondary">View Research</a>
-                    </div>
-                </div>
-                <div class="hero-visual">
-                    <div class="profile-card-3d">
-                        <div class="profile-img-container">
-                            <img src="assets/img/ashkanzadeh.jpg" alt="Ashkan Yousefi Zadeh" class="profile-img">
-                            <div class="status-badge">● Available</div>
-                        </div>
-                        <div class="profile-info">
-                            <h3>Ashkan Y. Zadeh</h3>
-                            <p>PhD Candidate<br>QUT, CARRS-Q</p>
-                            <div class="social-icons">
-                                <a href="https://research.qut.edu.au/carrsq/staff/ashkan-yousefi-zadeh/" target="_blank" class="social-icon" title="QUT Profile">🎓</a>
-                                <a href="https://linkedin.com/in/ashkan-ysf/" target="_blank" class="social-icon" title="LinkedIn">💼</a>
-                                <a href="https://github.com/ashkan-zadeh" target="_blank" class="social-icon" title="GitHub">💻</a>
-                                <a href="mailto:ashkan.zadeh@qut.edu.au" class="social-icon" title="Email">📧</a>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
