--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             position: relative;
             padding-top: 100px;
             overflow: hidden;
-            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('assets/img/ashkanzadeh.jpg');
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('asset/img/ashkanzadeh.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -234,7 +234,6 @@
         .cta-buttons {
             display: flex;
             gap: 1.5rem;
-            justify-content: center;
         }
 
         .btn {
@@ -650,14 +649,12 @@
         </div>
         <div class="container">
             <div class="hero-content">
-                <img src="assets/img/ashkanzadeh.jpg" alt="Ashkan Yousefi Zadeh" class="hero-profile-img">
-                
                 <div class="hero-text">
                     <h1>
                         Hi, I'm <span class="gradient-text">Ashkan Yousefi Zadeh</span>
                     </h1>
                     <p class="subtitle">
-                        <span class="typing-text">PhD Candidate · AI & Autonomous Vehicles Researcher</span>
+                        PhD Candidate · AI & Autonomous Vehicles Researcher
                     </p>
                     <p class="hero-description">
                         Working at the intersection of Human-Centred AI (HCAI), Explainable AI (XAI), and Natural Language Processing (NLP) to make automated vehicles more transparent, intuitive, and aligned with human expectations.
