--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             position: relative;
             padding-top: 100px;
             overflow: hidden;
-            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('asset/img/ashkanzadeh.jpg');
+            background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.6) 50%, rgba(0, 0, 0, 0.3) 100%), url('asset/img/ashkanzadeh2.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
