--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             position: relative;
             padding-top: 100px;
             overflow: hidden;
-            background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.6) 50%, rgba(0, 0, 0, 0.3) 100%), url('asset/img/ashkanzadeh2.jpg');
+            background: url('asset/img/ashkanzadeh2.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -131,7 +131,7 @@
             width: 100%;
             height: 100%;
             z-index: 0;
-            background: linear-gradient(135deg, rgba(0, 255, 136, 0.1), rgba(139, 92, 246, 0.1));
+            background: linear-gradient(to right, rgba(10, 10, 10, 0.85) 0%, rgba(10, 10, 10, 0.75) 40%, rgba(10, 10, 10, 0.3) 70%, transparent 100%);
         }
 
         .grid-background {
@@ -185,8 +185,13 @@
         .hero-content {
             position: relative;
             z-index: 1;
-            max-width: 900px;
+            max-width: 650px;
             text-align: left;
+            padding-left: 0;
+            background: rgba(0, 0, 0, 0.6);
+            padding: 3rem;
+            border-radius: 20px;
+            backdrop-filter: blur(10px);
         }
 
         .hero-profile-img {
@@ -194,12 +199,12 @@
         }
 
         .hero-text h1 {
-            font-size: 4.5rem;
+            font-size: 3.5rem;
             font-weight: 700;
-            line-height: 1.1;
+            line-height: 1.2;
             margin-bottom: 1.5rem;
             letter-spacing: -2px;
-            text-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
         }
 
         .gradient-text {
@@ -210,20 +215,21 @@
         }
 
         .hero-text .subtitle {
-            font-size: 1.5rem;
+            font-size: 1.4rem;
             color: var(--text-primary);
-            margin-bottom: 1.5rem;
+            margin-bottom: 2rem;
             font-weight: 400;
-            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+            text-shadow: 0 3px 15px rgba(0, 0, 0, 0.8);
         }
 
         .hero-description {
-            font-size: 1.1rem;
-            color: rgba(255, 255, 255, 0.9);
-            line-height: 1.8;
-            max-width: 700px;
+            font-size: 1.15rem;
+            color: rgba(255, 255, 255, 0.95);
+            line-height: 1.9;
+            max-width: 650px;
             margin: 0 0 3rem 0;
-            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+            text-shadow: 0 3px 15px rgba(0, 0, 0, 0.8);
+            font-weight: 400;
         }
 
         .typing-text {
