--- a/index.html
+++ b/index.html
@@ -188,10 +188,6 @@
             max-width: 650px;
             text-align: left;
             padding-left: 0;
-            background: rgba(0, 0, 0, 0.6);
-            padding: 3rem;
-            border-radius: 20px;
-            backdrop-filter: blur(10px);
         }
 
         .hero-profile-img {
@@ -202,9 +198,18 @@
             font-size: 3.5rem;
             font-weight: 700;
             line-height: 1.2;
-            margin-bottom: 1.5rem;
+            margin-bottom: 1rem;
             letter-spacing: -2px;
-            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.9), 0 0 20px rgba(0, 0, 0, 0.8);
+        }
+
+        .gradient-text {
+            background: var(--gradient);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-shadow: none;
+            filter: drop-shadow(2px 2px 8px rgba(0, 0, 0, 0.9));
         }
 
         .gradient-text {
@@ -215,20 +220,20 @@
         }
 
         .hero-text .subtitle {
-            font-size: 1.4rem;
+            font-size: 1.3rem;
             color: var(--text-primary);
-            margin-bottom: 2rem;
-            font-weight: 400;
-            text-shadow: 0 3px 15px rgba(0, 0, 0, 0.8);
+            margin-bottom: 1.5rem;
+            font-weight: 500;
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.9), 0 0 15px rgba(0, 0, 0, 0.8);
         }
 
         .hero-description {
-            font-size: 1.15rem;
+            font-size: 1.05rem;
             color: rgba(255, 255, 255, 0.95);
-            line-height: 1.9;
-            max-width: 650px;
-            margin: 0 0 3rem 0;
-            text-shadow: 0 3px 15px rgba(0, 0, 0, 0.8);
+            line-height: 1.8;
+            max-width: 600px;
+            margin: 0 0 2.5rem 0;
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.9), 0 0 15px rgba(0, 0, 0, 0.8);
             font-weight: 400;
         }
 
