--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
 
         .hero-background {
             position: absolute;
-            top: 0;
+            top: 30%;  /* This pushes the green gradient down - increase to push further down */
             left: 0;
             width: 100%;
-            height: 100%;
+            height: 70%;  /* Height of the gradient effect */
             z-index: 0;
-            background: linear-gradient(to right, rgba(10, 10, 10, 0.85) 0%, rgba(10, 10, 10, 0.75) 40%, rgba(10, 10, 10, 0.3) 70%, transparent 100%);
+            background: linear-gradient(to right, rgba(0, 100, 60, 0.4) 0%, rgba(0, 100, 60, 0.3) 25%, transparent 50%);
         }
 
         .grid-background {
