--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             position: relative;
             padding-top: 100px;
             overflow: hidden;
-            background: url('asset/img/ashkanzadeh2.jpg');
+            background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.6) 50%, rgba(0, 0, 0, 0.3) 100%), url('asset/img/ashkanzadeh2.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -126,12 +126,12 @@
 
         .hero-background {
             position: absolute;
-            top: 30%;  /* This pushes the green gradient down - increase to push further down */
+            top: 0;
             left: 0;
             width: 100%;
-            height: 70%;  /* Height of the gradient effect */
+            height: 100%;
             z-index: 0;
-            background: linear-gradient(to right, rgba(0, 100, 60, 0.4) 0%, rgba(0, 100, 60, 0.3) 25%, transparent 50%);
+            background: linear-gradient(135deg, rgba(0, 255, 136, 0.1), rgba(139, 92, 246, 0.1));
         }
 
         .grid-background {
@@ -185,9 +185,8 @@
         .hero-content {
             position: relative;
             z-index: 1;
-            max-width: 650px;
+            max-width: 900px;
             text-align: left;
-            padding-left: 0;
         }
 
         .hero-profile-img {
@@ -195,21 +194,12 @@
         }
 
         .hero-text h1 {
-            font-size: 3.5rem;
+            font-size: 4.5rem;
             font-weight: 700;
-            line-height: 1.2;
-            margin-bottom: 1rem;
+            line-height: 1.1;
+            margin-bottom: 1.5rem;
             letter-spacing: -2px;
-            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.9), 0 0 20px rgba(0, 0, 0, 0.8);
-        }
-
-        .gradient-text {
-            background: var(--gradient);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            text-shadow: none;
-            filter: drop-shadow(2px 2px 8px rgba(0, 0, 0, 0.9));
+            text-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
         }
 
         .gradient-text {
@@ -220,21 +210,20 @@
         }
 
         .hero-text .subtitle {
-            font-size: 1.3rem;
+            font-size: 1.5rem;
             color: var(--text-primary);
             margin-bottom: 1.5rem;
-            font-weight: 500;
-            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.9), 0 0 15px rgba(0, 0, 0, 0.8);
+            font-weight: 400;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
         }
 
         .hero-description {
-            font-size: 1.05rem;
-            color: rgba(255, 255, 255, 0.95);
+            font-size: 1.1rem;
+            color: rgba(255, 255, 255, 0.9);
             line-height: 1.8;
-            max-width: 600px;
-            margin: 0 0 2.5rem 0;
-            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.9), 0 0 15px rgba(0, 0, 0, 0.8);
-            font-weight: 400;
+            max-width: 700px;
+            margin: 0 0 3rem 0;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
         }
 
         .typing-text {
