--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="Ashkan Yousefi Zadeh - PhD Candidate at QUT specializing in Explainable AI (XAI) for Automated Vehicles, Human-Centred AI, and Natural Language Processing.">
     <meta name="keywords" content="Ashkan Yousefi Zadeh, Ashkan Y. Zadeh, Ashkan Zadeh, XAI, Explainable AI, Automated Vehicles, Autonomous Vehicles, QUT, CARRS-Q, AI Researcher, Machine Learning, NLP, Human-Centred AI">
-    <meta name="author" content="Ashkan Yousefi Zadeh">
+    <meta name="author" content="Ashkan Yousefi Zadeh, Ashkan Y. Zadeh">
     <meta name="robots" content="index, follow">
     
     <!-- Open Graph Meta Tags (for social sharing) -->
@@ -221,15 +221,6 @@
             margin-bottom: 1rem;
             letter-spacing: -2px;
             text-shadow: 3px 3px 10px rgba(0, 0, 0, 1), 0 0 30px rgba(0, 0, 0, 0.9), 0 0 40px rgba(0, 0, 0, 0.8);
-        }
-
-        .gradient-text {
-            background: var(--gradient);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            text-shadow: none;
-            filter: drop-shadow(3px 3px 10px rgba(0, 0, 0, 1)) drop-shadow(0 0 30px rgba(0, 0, 0, 0.9));
         }
 
         .gradient-text {
@@ -575,9 +566,9 @@
         /* Contact Section */
         .contact-grid {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-columns: repeat(5, 1fr);
             gap: 2rem;
-            max-width: 1200px;
+            max-width: 1400px;
             margin: 0 auto;
         }
 
@@ -810,22 +801,6 @@
             </div>
             <div class="publications-list">
                 <div class="publication-item">
-                    <div class="publication-year">2025</div>
-                    <h3>PsyLingXAV: A Psycholinguistics Design Framework for XAI in Automated Vehicles</h3>
-                    <p class="publication-authors">Ashkan Yousefi Zadeh, Xiaomeng Li, Andry Rakotonirainy, Ronald Schroeter, Sebastien Glaser</p>
-                    <span class="publication-venue">XAI-2025 (Submitted)</span>
-                    <a href="https://xaiworldconference.com/2025/" target="_blank" class="publication-link">View Conference</a>
-                </div>
-
-                <div class="publication-item">
-                    <div class="publication-year">2024</div>
-                    <h3>Integrated Intelligent Control Systems for Eco and Safe Driving in Autonomous Vehicles</h3>
-                    <p class="publication-authors">A. Yousefi Zadeh, A. Jamali, R. Mallipeddi, H. Khayyam</p>
-                    <span class="publication-venue">IEEE Transactions on Intelligent Transportation Systems</span>
-                    <a href="https://doi.org/10.1109/TITS.2024.3479332" target="_blank" class="publication-link">View Publication</a>
-                </div>
-
-                <div class="publication-item">
                     <div class="publication-year">2024</div>
                     <h3>Fuzzy Adaptive Cruise Control with Model Predictive Control for Automated Driving</h3>
                     <p class="publication-authors">Z. Mehraban, A. Yousefi Zadeh, A. Jamali, R. Mallipeddi, H. Khayyam</p>
@@ -953,6 +928,11 @@
                     <h3>LinkedIn</h3>
                     <p><a href="https://linkedin.com/in/ashkan-ysf/" target="_blank">Connect with me</a></p>
                 </div>
+                <div class="contact-card">
+                    <div class="contact-icon">📚</div>
+                    <h3>Google Scholar</h3>
+                    <p><a href="https://scholar.google.com/citations?user=6e-KEPoAAAAJ&hl=en&oi=ao" target="_blank">View Publications</a></p>
+                </div>
             </div>
         </div>
     </section>
@@ -984,7 +964,8 @@
       "sameAs": [
         "https://linkedin.com/in/ashkan-ysf/",
         "https://github.com/ashkan-zadeh",
-        "https://research.qut.edu.au/carrsq/staff/ashkan-yousefi-zadeh/"
+        "https://research.qut.edu.au/carrsq/staff/ashkan-yousefi-zadeh/",
+        "https://scholar.google.com/citations?user=6e-KEPoAAAAJ&hl=en&oi=ao"
       ],
       "knowsAbout": [
         "Explainable AI",
@@ -1032,4 +1013,20 @@
         });
     </script>
 </body>
-</html>
+</html> class="publication-year">2025</div>
+                    <h3>PsyLingXAV: A Psycholinguistics Design Framework for XAI in Automated Vehicles</h3>
+                    <p class="publication-authors">Ashkan Yousefi Zadeh, Xiaomeng Li, Andry Rakotonirainy, Ronald Schroeter, Sebastien Glaser</p>
+                    <span class="publication-venue">XAI-2025 (Submitted)</span>
+                    <a href="https://xaiworldconference.com/2025/" target="_blank" class="publication-link">View Conference</a>
+                </div>
+
+                <div class="publication-item">
+                    <div class="publication-year">2024</div>
+                    <h3>Integrated Intelligent Control Systems for Eco and Safe Driving in Autonomous Vehicles</h3>
+                    <p class="publication-authors">A. Yousefi Zadeh, A. Jamali, R. Mallipeddi, H. Khayyam</p>
+                    <span class="publication-venue">IEEE Transactions on Intelligent Transportation Systems</span>
+                    <a href="https://doi.org/10.1109/TITS.2024.3479332" target="_blank" class="publication-link">View Publication</a>
+                </div>
+
+                <div class="publication-item">
+                    <div
