--- a/index.html
+++ b/index.html
@@ -953,6 +953,11 @@
                     <h3>LinkedIn</h3>
                     <p><a href="https://linkedin.com/in/ashkan-ysf/" target="_blank">Connect with me</a></p>
                 </div>
+                <div class="contact-card">
+                    <div class="contact-icon">📚</div>
+                    <h3>Google Scholar</h3>
+                    <p><a href="https://scholar.google.com/citations?user=6e-KEPoAAAAJ&hl=en&oi=ao" target="_blank">View Publications</a></p>
+                </div>
             </div>
         </div>
     </section>
@@ -984,7 +989,8 @@
       "sameAs": [
         "https://linkedin.com/in/ashkan-ysf/",
         "https://github.com/ashkan-zadeh",
-        "https://research.qut.edu.au/carrsq/staff/ashkan-yousefi-zadeh/"
+        "https://research.qut.edu.au/carrsq/staff/ashkan-yousefi-zadeh/",
+        "https://scholar.google.com/citations?user=6e-KEPoAAAAJ&hl=en&oi=ao"
       ],
       "knowsAbout": [
         "Explainable AI",
