Refactor skills section layout and styles

--- a/index.html
+++ b/index.html
@@ -518,35 +518,35 @@
         <section id="skills">
             <div class="container">
                 <h2>Skills</h2>
-                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px;">
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 40px; max-width: 800px;">
                     <div>
-                        <h3 style="font-size: 1.1rem; margin-bottom: 15px; color: var(--text-primary);">Programming</h3>
-                        <div class="interests-list" style="flex-direction: column; align-items: flex-start;">
-                            <span class="interest-tag">Python</span>
-                            <span class="interest-tag">MATLAB</span>
+                        <h3 style="font-size: 1.1rem; margin-bottom: 12px; font-weight: 600; color: var(--text-primary);">Programming</h3>
+                        <div style="display: flex; flex-direction: column; gap: 8px;">
+                            <span class="interest-tag" style="display: inline-block; width: fit-content;">Python</span>
+                            <span class="interest-tag" style="display: inline-block; width: fit-content;">MATLAB</span>
                         </div>
                     </div>
                     <div>
-                        <h3 style="font-size: 1.1rem; margin-bottom: 15px; color: var(--text-primary);">Computational</h3>
-                        <div class="interests-list" style="flex-direction: column; align-items: flex-start;">
-                            <span class="interest-tag">Machine Learning</span>
-                            <span class="interest-tag">Neural Networks</span>
-                            <span class="interest-tag">NLP</span>
-                            <span class="interest-tag">LLMs</span>
-                            <span class="interest-tag">Fuzzy Logic</span>
-                            <span class="interest-tag">Evolutionary Algorithms</span>
+                        <h3 style="font-size: 1.1rem; margin-bottom: 12px; font-weight: 600; color: var(--text-primary);">Computational</h3>
+                        <div style="display: flex; flex-direction: column; gap: 8px;">
+                            <span class="interest-tag" style="display: inline-block; width: fit-content;">Machine Learning</span>
+                            <span class="interest-tag" style="display: inline-block; width: fit-content;">Neural Networks</span>
+                            <span class="interest-tag" style="display: inline-block; width: fit-content;">NLP</span>
+                            <span class="interest-tag" style="display: inline-block; width: fit-content;">LLMs</span>
+                            <span class="interest-tag" style="display: inline-block; width: fit-content;">Fuzzy Logic</span>
+                            <span class="interest-tag" style="display: inline-block; width: fit-content;">Evolutionary Algorithms</span>
                         </div>
                     </div>
                     <div>
-                        <h3 style="font-size: 1.1rem; margin-bottom: 15px; color: var(--text-primary);">Tools & Technologies</h3>
-                        <div class="interests-list" style="flex-direction: column; align-items: flex-start;">
-                            <span class="interest-tag">Simulink</span>
-                            <span class="interest-tag">Linux</span>
-                            <span class="interest-tag">ROS</span>
-                            <span class="interest-tag">Git</span>
-                            <span class="interest-tag">Pandas</span>
-                            <span class="interest-tag">NumPy</span>
-                            <span class="interest-tag">Scikit-learn</span>
+                        <h3 style="font-size: 1.1rem; margin-bottom: 12px; font-weight: 600; color: var(--text-primary);">Tools & Technologies</h3>
+                        <div style="display: flex; flex-direction: column; gap: 8px;">
+                            <span class="interest-tag" style="display: inline-block; width: fit-content;">Simulink</span>
+                            <span class="interest-tag" style="display: inline-block; width: fit-content;">Linux</span>
+                            <span class="interest-tag" style="display: inline-block; width: fit-content;">ROS</span>
+                            <span class="interest-tag" style="display: inline-block; width: fit-content;">Git</span>
+                            <span class="interest-tag" style="display: inline-block; width: fit-content;">Pandas</span>
+                            <span class="interest-tag" style="display: inline-block; width: fit-content;">NumPy</span>
+                            <span class="interest-tag" style="display: inline-block; width: fit-content;">Scikit-learn</span>
                         </div>
                     </div>
                 </div>
