--- a/index.html
+++ b/index.html
@@ -239,15 +239,22 @@
         .interests-list {
             display: flex;
             flex-wrap: wrap;
-            gap: 12px;
+            gap: 10px;
         }
 
         .interest-tag {
-            background: #f5f5f5;
-            padding: 6px 14px;
-            border-radius: 3px;
-            font-size: 14px;
+            background: #f8f9fa;
+            padding: 8px 16px;
+            border-radius: 4px;
+            font-size: 15px;
             color: var(--text-primary);
+            border: 1px solid #e9ecef;
+            transition: all 0.2s ease;
+        }
+        
+        .interest-tag:hover {
+            background: #e9ecef;
+            border-color: #dee2e6;
         }
 
         /* Experience */
@@ -366,7 +373,7 @@
                     <li><a href="#research">Research</a></li>
                     <li><a href="#publications">Publications</a></li>
                     <li><a href="#experience">Experience</a></li>
-                    <li><a href="Ashkan_CV_March2025.pdf" target="_blank">CV</a></li>
+                    <li><a href="asset/img/Ashkan_CV_Jan2026.pdf" target="_blank">CV</a></li>
                 </ul>
             </nav>
         </header>
@@ -391,7 +398,7 @@
                     <a href="https://scholar.google.com/citations?user=6e-KEPoAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
                     <a href="https://linkedin.com/in/ashkan-ysf/" target="_blank">LinkedIn</a>
                     <a href="https://github.com/ashkan-zadeh" target="_blank">GitHub</a>
-                    <a href="Ashkan_CV_March2025.pdf" target="_blank">CV</a>
+                    <a href="asset/img/Ashkan_CV_Jan2026.pdf" target="_blank">CV</a>
                 </div>
             </div>
         </section>
