--- a/index.html
+++ b/index.html
@@ -243,18 +243,20 @@
         }
 
         .interest-tag {
-            background: #f8f9fa;
+            background: #e3f2fd;
             padding: 8px 16px;
             border-radius: 4px;
             font-size: 15px;
-            color: var(--text-primary);
-            border: 1px solid #e9ecef;
+            color: #1565c0;
+            border: 1px solid #bbdefb;
             transition: all 0.2s ease;
+            font-weight: 500;
         }
         
         .interest-tag:hover {
-            background: #e9ecef;
-            border-color: #dee2e6;
+            background: #bbdefb;
+            border-color: #90caf9;
+            color: #0d47a1;
         }
 
         /* Experience */
@@ -394,7 +396,7 @@
                 <p>My research focuses on developing human-centric explanation models for <span style="color: var(--accent);">automated vehicles</span>, bridging the gap between AI decision-making and human understanding through <span style="color: var(--accent);">natural language processing</span> and <span style="color: var(--accent);">explainable AI</span> techniques. I work at the intersection of Human-Centred AI, Explainable AI (XAI), and Natural Language Processing to make automated vehicles more transparent and trustworthy.</p>
 
                 <div class="contact-links">
-                    <a href="mailto:ashkan.zadeh@qut.edu.au">Email</a>
+                    <span style="color: var(--text-primary);">Email: ashkan.zadeh@qut.edu.au</span>
                     <a href="https://scholar.google.com/citations?user=6e-KEPoAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
                     <a href="https://linkedin.com/in/ashkan-ysf/" target="_blank">LinkedIn</a>
                     <a href="https://github.com/ashkan-zadeh" target="_blank">GitHub</a>
