--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
             --bg-color: #ffffff;
             --text-primary: #2d2d2d;
             --text-secondary: #666666;
-            --accent: #0056b3;
-            --accent-hover: #003d82;
+            --accent: #81b29a;
+            --accent-hover: #6a9581;
+            --accent-secondary: #e07a5f;
             --border-color: #e0e0e0;
             --serif: 'Crimson Pro', serif;
             --sans: 'IBM Plex Sans', -apple-system, sans-serif;
@@ -243,20 +244,20 @@
         }
 
         .interest-tag {
-            background: #e3f2fd;
+            background: #e8f3ee;
             padding: 8px 16px;
             border-radius: 4px;
             font-size: 15px;
-            color: #1565c0;
-            border: 1px solid #bbdefb;
+            color: #81b29a;
+            border: 1px solid #c5ddd0;
             transition: all 0.2s ease;
             font-weight: 500;
         }
         
         .interest-tag:hover {
-            background: #bbdefb;
-            border-color: #90caf9;
-            color: #0d47a1;
+            background: #81b29a;
+            border-color: #81b29a;
+            color: #ffffff;
         }
 
         /* Experience */
