--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
 
         :root {
             --bg-color: #ffffff;
-            --text-primary: #2d2d2d;
-            --text-secondary: #666666;
-            --accent: #81b29a;
-            --accent-hover: #6a9581;
-            --accent-secondary: #e07a5f;
+            --text-primary: #000000;
+            --text-secondary: #000000;
+            --accent: #9381ff;
+            --accent-hover: #7a66e6;
             --border-color: #e0e0e0;
             --serif: 'Crimson Pro', serif;
             --sans: 'IBM Plex Sans', -apple-system, sans-serif;
@@ -244,19 +243,19 @@
         }
 
         .interest-tag {
-            background: #e8f3ee;
+            background: #9381ff;
             padding: 8px 16px;
             border-radius: 4px;
             font-size: 15px;
-            color: #81b29a;
-            border: 1px solid #c5ddd0;
+            color: #ffffff;
+            border: 1px solid #9381ff;
             transition: all 0.2s ease;
             font-weight: 500;
         }
         
         .interest-tag:hover {
-            background: #81b29a;
-            border-color: #81b29a;
+            background: #7a66e6;
+            border-color: #7a66e6;
             color: #ffffff;
         }
 
@@ -397,7 +396,7 @@
                 <p>My research focuses on developing human-centric explanation models for <span style="color: var(--accent);">automated vehicles</span>, bridging the gap between AI decision-making and human understanding through <span style="color: var(--accent);">natural language processing</span> and <span style="color: var(--accent);">explainable AI</span> techniques. I work at the intersection of Human-Centred AI, Explainable AI (XAI), and Natural Language Processing to make automated vehicles more transparent and trustworthy.</p>
 
                 <div class="contact-links">
-                    <span style="color: var(--text-primary);">Email: ashkan.zadeh@qut.edu.au</span>
+                    <span style="color: #000000;">Email: ashkan.zadeh@qut.edu.au</span>
                     <a href="https://scholar.google.com/citations?user=6e-KEPoAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
                     <a href="https://linkedin.com/in/ashkan-ysf/" target="_blank">LinkedIn</a>
                     <a href="https://github.com/ashkan-zadeh" target="_blank">GitHub</a>
