Change accent colors in CSS variables

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             --bg-color: #ffffff;
             --text-primary: #000000;
             --text-secondary: #000000;
-            --accent: #9381ff;
-            --accent-hover: #7a66e6;
+            --accent: #c44536;
+            --accent-hover: #a33729;
             --border-color: #e0e0e0;
             --serif: 'Crimson Pro', serif;
             --sans: 'IBM Plex Sans', -apple-system, sans-serif;
@@ -291,19 +291,19 @@
         }
 
         .interest-tag {
-            background: #9381ff;
+            background: #c44536;
             padding: 8px 16px;
             border-radius: 4px;
             font-size: 15px;
             color: #ffffff;
-            border: 1px solid #9381ff;
+            border: 1px solid #c44536;
             transition: all 0.2s ease;
             font-weight: 500;
         }
         
         .interest-tag:hover {
-            background: #7a66e6;
-            border-color: #7a66e6;
+            background: #a33729;
+            border-color: #a33729;
             color: #ffffff;
         }
 
