Update profile name and affiliation links

--- a/index.html
+++ b/index.html
@@ -444,11 +444,11 @@
         <section class="profile" id="about">
             <img src="asset/img/3ashkanzadeh.jpg" alt="Ashkan Yousefi Zadeh" class="profile-image">
             <div class="profile-content">
-                <h1>Ashkan Yousefi Zadeh</h1>
+                <h1>Ashkan Y. Zadeh</h1>
                 <div class="affiliation">
                     PhD Candidate in Computer Science<br>
                     <a href="https://avr3.org.au/" target="_blank" style="color: var(--accent); text-decoration: none;">ARC Training Centre for Automated Vehicles in Rural and Remote Regions (AVR3)</a><br>
-                    <a href="https://www.qut.edu.au/" target="_blank" style="color: var(--accent); text-decoration: none;">Queensland University of Technology</a>
+                    <a href="https://www.qut.edu.au/" target="_blank"; text-decoration: none;">Queensland University of Technology</a>
                 </div>
                 
                 <p>I am a PhD candidate at Queensland University of Technology, supervised by <a href="https://www.qut.edu.au/about/our-people/academic-profiles/xiaomeng.li" target="_blank" style="color: var(--accent); text-decoration: none;">Dr. Xiaomeng Li</a>, <a href="https://www.qut.edu.au/about/our-people/academic-profiles/r.andry" target="_blank" style="color: var(--accent); text-decoration: none;">Prof. Andry Rakotonirainy</a>, <a href="https://www.qut.edu.au/about/our-people/academic-profiles/r.schroeter" target="_blank" style="color: var(--accent); text-decoration: none;">Prof. Ronald Schroeter</a>, and <a href="https://www.qut.edu.au/about/our-people/academic-profiles/sebastien.glaser" target="_blank" style="color: var(--accent); text-decoration: none;">Prof. Sebastien Glaser</a>.</p>
