--- a/index.html
+++ b/index.html
@@ -448,12 +448,12 @@
                 <div class="affiliation">
                     PhD Candidate in Computer Science<br>
                     <a href="https://avr3.org.au/" target="_blank" style="color: var(--accent); text-decoration: none;">ARC Training Centre for Automated Vehicles in Rural and Remote Regions (AVR3)</a><br>
-                    <a href="https://www.qut.edu.au/" target="_blank"; text-decoration: none;">Queensland University of Technology</a>
+                    Queensland University of Technology
                 </div>
                 
                 <p>I am a PhD candidate at Queensland University of Technology, supervised by <a href="https://www.qut.edu.au/about/our-people/academic-profiles/xiaomeng.li" target="_blank" style="color: var(--accent); text-decoration: none;">Dr. Xiaomeng Li</a>, <a href="https://www.qut.edu.au/about/our-people/academic-profiles/r.andry" target="_blank" style="color: var(--accent); text-decoration: none;">Prof. Andry Rakotonirainy</a>, <a href="https://www.qut.edu.au/about/our-people/academic-profiles/r.schroeter" target="_blank" style="color: var(--accent); text-decoration: none;">Prof. Ronald Schroeter</a>, and <a href="https://www.qut.edu.au/about/our-people/academic-profiles/sebastien.glaser" target="_blank" style="color: var(--accent); text-decoration: none;">Prof. Sebastien Glaser</a>.</p>
                 
-                <p>My research focuses on developing human-centric explanation models for <span style="color: var(--accent);">automated vehicles</span>, bridging the gap between AI decision-making and human understanding through <span style="color: var(--accent);">natural language processing</span> and <span style="color: var(--accent);">explainable AI</span> techniques. I work at the intersection of Human-Centred AI, Explainable AI (XAI), and Natural Language Processing to make automated vehicles more transparent and trustworthy.</p>
+                <p>My research develops human-centric explanation models for <span style="color: var(--accent);">Automated Vehicles (AVs)</span> that bridge AI decision-making with human understanding. I integrate <span style="color: var(--accent);">Human-Centred Artificial Intelligence (HCAI)</span>, <span style="color: var(--accent);">Explainable AI (XAI)</span>, and <span style="color: var(--accent);">Natural Language Processing (NLP)</span> to enhance transparency and trust in autonomous driving systems.</p>
 
                 <div class="contact-links">
                     <span style="color: #000000;">Email: ashkan.zadeh@qut.edu.au</span>
@@ -564,6 +564,7 @@
                         <div class="publication-authors"><a href="#" style="color: var(--text-primary); text-decoration: underline;">Ashkan Yousefi Zadeh</a>, Xiaomeng Li, Andry Rakotonirainy, Ronald Schroeter, and Sebastien Glaser</div>
                         <div class="publication-venue">XAI-2025 (The 3rd World Conference on eXplainable Artificial Intelligence)</div>
                         <div class="publication-links">
+                            <a href="https://ceur-ws.org/Vol-4017/paper_14.pdf" target="_blank">PAPER</a>
                             <a href="https://xaiworldconference.com/2025/" target="_blank">CONFERENCE</a>
                         </div>
                     </div>
