--- a/index.html
+++ b/index.html
@@ -689,8 +689,7 @@
                         <div class="experience-title">Python Developer</div>
                         <div class="experience-date">Nov 2022 - Mar 2023</div>
                     </div>
-                    <div class="experience-org">HeyvaAI, 
-                    <div class="experience-org"><a href="https://heyvaai.com/" target="_blank" style="color: var(--accent); text-decoration: none;">HeyvaAI</a> 
+                    <div class="experience-org">HeyvaAI <a href="https://heyvaai.com/" target="_blank" style="color: var(--accent); text-decoration: none;">HeyvaAI</a> 
                     <div class="experience-description">Responsible for coding, deploying, and debugging development AI projects on server-side applications</div>
                 </li>
                 
