--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
             padding: 60px 30px;
         }
 
+        /* Header Image */
+        .header-image {
+            width: 100%;
+            height: 400px;
+            object-fit: cover;
+            margin-bottom: 40px;
+            border-radius: 4px;
+        }
+
         /* Header/Navigation */
         header {
             border-bottom: 1px solid var(--border-color);
@@ -366,6 +375,11 @@
                 padding: 40px 20px;
             }
 
+            .header-image {
+                height: 250px;
+                margin-bottom: 30px;
+            }
+
             .profile {
                 grid-template-columns: 1fr;
                 gap: 25px;
@@ -426,6 +440,9 @@
 </head>
 <body>
     <div class="container">
+        <!-- Header Image -->
+        <img src="asset/img/ashkanzadeh2.jpg" alt="Ashkan Yousefi Zadeh" class="header-image">
+        
         <!-- Header/Navigation -->
         <header>
             <nav>
