--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
         /* Header Image */
         .header-image {
             width: 100%;
-            height: 250px;
+            height: 280px;
             object-fit: cover;
+            object-position: center 30%;
             margin-bottom: 40px;
             border-radius: 4px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         }
 
         /* Header/Navigation */
@@ -376,8 +378,9 @@
             }
 
             .header-image {
-                height: 180px;
+                height: 200px;
                 margin-bottom: 30px;
+                object-position: center 35%;
             }
 
             .profile {
