--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             --bg-color: #ffffff;
             --text-primary: #000000;
             --text-secondary: #000000;
-            --accent: #c44536;
-            --accent-hover: #a33729;
+            --accent: #2c5282;
+            --accent-hover: #1a365d;
             --border-color: #e0e0e0;
             --serif: 'Crimson Pro', serif;
             --sans: 'IBM Plex Sans', -apple-system, sans-serif;
@@ -133,6 +133,11 @@
         /* Profile Section */
         .profile {
             margin-bottom: 60px;
+            padding: 40px;
+            border: 1px solid var(--border-color);
+            border-radius: 8px;
+            background: #fafafa;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
         }
 
         .profile-content h1 {
@@ -324,19 +329,19 @@
         }
 
         .interest-tag {
-            background: #c44536;
+            background: #2c5282;
             padding: 8px 16px;
             border-radius: 4px;
             font-size: 15px;
             color: #ffffff;
-            border: 1px solid #c44536;
+            border: 1px solid #2c5282;
             transition: all 0.2s ease;
             font-weight: 500;
         }
         
         .interest-tag:hover {
-            background: #a33729;
-            border-color: #a33729;
+            background: #1a365d;
+            border-color: #1a365d;
             color: #ffffff;
         }
 
