--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             height: 100%;
             object-fit: cover;
             object-position: center 30%;
-            filter: brightness(0.85) contrast(1.05);
+            filter: brightness(1.1) contrast(0.95);
         }
         
         .header-overlay {
@@ -74,7 +74,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(to right, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.05) 100%);
+            background: linear-gradient(to right, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.4) 100%);
             display: flex;
             align-items: flex-end;
             justify-content: flex-end;
@@ -83,10 +83,10 @@
         
         .header-name {
             font-family: var(--serif);
-            font-size: 36px;
-            font-weight: 600;
+            font-size: 42px;
+            font-weight: 700;
             color: #ffffff;
-            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
+            text-shadow: 3px 3px 12px rgba(0, 0, 0, 0.8), 1px 1px 4px rgba(0, 0, 0, 0.9);
             letter-spacing: -0.5px;
         }
 
@@ -119,17 +119,22 @@
         }
 
         nav a {
-            color: var(--accent);
+            color: #ffffff;
             text-decoration: none;
-            font-size: 15px;
+            font-size: 16px;
             transition: all 0.2s;
-            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
-            font-weight: 500;
+            text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
+            font-weight: 600;
+            background: rgba(0, 0, 0, 0.3);
+            padding: 8px 16px;
+            border-radius: 6px;
+            backdrop-filter: blur(4px);
         }
 
         nav a:hover {
-            color: #ffffff;
+            background: rgba(0, 102, 204, 0.9);
             transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
 
         /* Profile Section */
