--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             height: 100%;
             background: linear-gradient(to right, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.4) 100%);
             display: flex;
-            align-items: flex-end;
+            align-items: center;
             justify-content: flex-end;
             padding: 30px 50px;
         }
@@ -88,15 +88,16 @@
             color: #ffffff;
             text-shadow: 3px 3px 12px rgba(0, 0, 0, 0.8), 1px 1px 4px rgba(0, 0, 0, 0.9);
             letter-spacing: -0.5px;
+            margin-bottom: 20px;
         }
 
         /* Header/Navigation */
         header {
             position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            padding: 20px 50px;
+            bottom: 30px;
+            right: 0;
+            width: auto;
+            padding: 0 50px;
             z-index: 10;
         }
 
@@ -105,7 +106,7 @@
             justify-content: flex-end;
             align-items: center;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 15px;
         }
 
         .site-title {
@@ -115,7 +116,9 @@
         nav ul {
             list-style: none;
             display: flex;
-            gap: 30px;
+            gap: 15px;
+            margin: 0;
+            padding: 0;
         }
 
         nav a {
