--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             display: flex;
             flex-direction: column;
             align-items: flex-end;
-            justify-content: center;
+            justify-content: flex-end;
             padding: 30px 50px;
         }
         
